<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y20"
    android:background="@color/activity_backgroud" >

    <ImageButton
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/x4"
        android:background="@drawable/fragment_draw_detail_textview_begin_test"
        android:padding="@dimen/y4"
        android:src="@drawable/arrow"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login_activity_title_text_text"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_size_35"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_vdieo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_draw_detail_textview_begin_test"
            android:drawableLeft="@drawable/icon_video_white"
            android:drawablePadding="@dimen/y4"
            android:padding="@dimen/y4"
            android:text="@string/text_video"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <View
            android:id="@+id/image_line"
            android:layout_width="1px"
            android:layout_height="@dimen/y11"
            android:layout_centerVertical="true"
            android:background="#ffffff"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_draw_detail_textview_begin_test"
            android:padding="@dimen/y4"
            android:text="@string/button_point"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/imagBtn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_draw_detail_textview_begin_test"
            android:padding="@dimen/y4"
            android:src="@drawable/settings"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>